passport local auth done

--- a/passport-local/views/index.ejs
+++ b/passport-local/views/index.ejs
@@ -1,5 +1,5 @@
-<%-include("layout /header")%>
-    <main>
+<%-include("layout/header")%>
+    <main style="text-align: center;">
         <h1>Welcome to the Home page</h1>
     </main>
-    <%-include("layout /footer")%>
+    <%-include("layout/footer")%>
