--- a/passport-local/views/profile.ejs
+++ b/passport-local/views/profile.ejs
@@ -1,5 +1,5 @@
-<%-include("layout /header")%>
-    <main>
-        <h1>This is Profile Page</h1>
+<%-include("layout/header")%>
+    <main style="text-align: center;">
+        <h1>Profile Username: <span style="color: forestgreen"><%= username %></span></h1>
     </main>
-    <%-include("layout /footer")%>
+    <%-include("layout/footer")%>
