--- a/passport-local/views/layout/footer.ejs
+++ b/passport-local/views/layout/footer.ejs
@@ -1,3 +1,6 @@
-<footer>
+<footer 
+    style="background-color: black; color: white; 
+        padding: 20px 0px; text-align: center; 
+        font-size: 18px; margin-top: 70px;">
     <p>copyright by me</p>
 </footer>
