--- a/passport-local/views/layout/header.ejs
+++ b/passport-local/views/layout/header.ejs
@@ -5,17 +5,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Passport Local Auth</title>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .container {
+            padding: 30px 0px;
+        }
+
+        a{
+            color: white;
+            font-size: 18px;
+            text-decoration: none;
+            margin: 0px 10px;
+        }
+
+    </style>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/register">Register</a>
-            <a href="/login">Login</a>
-            <a href="/profile">Profile</a>
-            <a href="/logout">Logout</a>
+        <nav class="navbar">
+            <div class="container">
+                <a href="/">Home</a>
+                <a href="/register">Register</a>
+                <a href="/login">Login</a>
+                <a href="/profile">Profile</a>
+                <a href="/logout">Logout</a>
+            </div>
         </nav>
     </header>
 </body>
