--- a/passport-local/views/login.ejs
+++ b/passport-local/views/login.ejs
@@ -1,18 +1,18 @@
-<%-include("layout /header")%>
-    <main>
-        <h1>Login Page</h1>
-        <form action="/login" method="post">
+<%-include("layout/header")%>
+    <main style="display: flex; justify-content: center; 
+        align-items: center;">
+        <form action="/login" method="post" 
+            style="display: flex; flex-direction: column; gap: 30px;">
+            <h1>Login Page</h1>
             <div>
                 <label for="username">username: </label>
                 <input type="text" id="username" name="username" />
             </div>
-            <br />
             <div>
                 <label for="password">password: </label>
                 <input type="password" id="password" name="password" />
             </div>
-            <br />
             <button type="submit">Login</button>
         </form>
     </main>
-    <%-include("layout /footer")%>
+    <%-include("layout/footer")%>
